--- a/public/src/index.html
+++ b/public/src/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
 
+<div id="page-container"></div>
+
+<script src="js/vendor/jquery-1.11.3.min.js"></script>
+<script src="js/vendor/underscore-1.8.3.min.js"></script>
+<script src="js/vendor/backbone-1.2.3.min.js"></script>
 
 <script src="js/main.js"></script>
-
 </body>
 </html>
