feat(general): style header and mobile movies list

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 
+<div id="header-container"></div>
 <div id="page-container"></div>
+<div id="player-container"></div>
 
 <script src="js/vendor/jquery-1.11.3.min.js"></script>
 <script src="js/vendor/underscore-1.8.3.min.js"></script>
