feat(series): style series view

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="js/vendor/modernizr-custom.min.js"></script>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 <div id="page-container"></div>
 <div id="player-container"></div>
 
-<script src="js/vendor/jquery-1.11.3.min.js"></script>
+<script src="js/vendor/jquery-2.2.0.min.js"></script>
 <script src="js/vendor/underscore-1.8.3.min.js"></script>
 <script src="js/vendor/backbone-1.2.3.min.js"></script>
 
