feat(music): basic control of spotify playback

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -14,7 +14,7 @@
 
 <div id="header-container"></div>
 <div id="page-container"></div>
-<div id="player-container"></div>
+<div id="player-container" class="view-player"></div>
 
 <script src="js/vendor/jquery-2.2.0.min.js"></script>
 <script src="js/vendor/underscore-1.8.3.min.js"></script>
