feat(general): add apple webapp specific meta tags

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -30,6 +30,9 @@
     <meta name="msapplication-TileColor" content="#2d2f32">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
 
